unpackaged/main/default/objects/FS_Student_Autorenew__mdt/FS_Student_Autorenew__mdt.object-meta.xml
<CustomObject>
    <label>Student Autorenew</label>
    <pluralLabel>Student Autorenew</pluralLabel>
</CustomObject>