unpackaged/main/default/objects/FS_Student_Autorenew__mdt/fields/FS_1_Year_Subscription_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_1_Year_Subscription_Plan_Id__c</fullName>
    <label>1 Year Subscription Plan Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>