unpackaged/main/default/objects/FS_Student_Autorenew__mdt/fields/FS_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>FS_Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>