unpackaged/main/default/objects/FS_Student_Autorenew__mdt/fields/FS_Days_For_Student__c.field-meta.xml
<CustomField>
    <fullName>FS_Days_For_Student__c</fullName>
    <description>Invoice days variable value on the subscription record</description>
    <label>Days For Student</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>