unpackaged/main/default/objects/FS_Student_Autorenew__mdt/fields/FS_Days_For_Student_Extension__c.field-meta.xml
<CustomField>
    <fullName>FS_Days_For_Student_Extension__c</fullName>
    <description>Invoice days variable for student extension plan</description>
    <label>Days For Student Extension</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>