unpackaged/main/default/objects/FS_Student_Autorenew__mdt/fields/FS_Law_Student_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Law_Student_Item_Id__c</fullName>
    <description>Comma separated list of law student item ids.</description>
    <inlineHelpText>Comma separated list of law student item ids.</inlineHelpText>
    <label>Law Student Item Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>