unpackaged/main/default/objects/FS_Student_Autorenew__mdt/fields/FS_Student_Ext_Days_After_Graduation__c.field-meta.xml
<CustomField>
    <fullName>FS_Student_Ext_Days_After_Graduation__c</fullName>
    <inlineHelpText>How many days after the person graduates before this button disappears from the page. Users can access the form on and after the Student Ext Days Before Grad date but cannot see the form after Student Ext Days After Grad has passed. This should be a posit</inlineHelpText>
    <label>Student Ext Days After Graduation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>