unpackaged/main/default/objects/FS_Student_Autorenew__mdt/fields/FS_Student_Ext_Days_Before_Graduation__c.field-meta.xml
<CustomField>
    <fullName>FS_Student_Ext_Days_Before_Graduation__c</fullName>
    <inlineHelpText>How many days before the person graduates before we show this form and button. Users can access the form on and after this date but cannot see the form after Student Ext Days After Grad has passed. This should be a positive integer</inlineHelpText>
    <label>Student Ext Days Before Graduation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>