unpackaged/main/default/objects/FS_Student_Autorenew__mdt/fields/FS_Student_Extension_Plan__c.field-meta.xml
<CustomField>
    <fullName>FS_Student_Extension_Plan__c</fullName>
    <label>Student Extension Plan</label>
    <length>50</length>
    <type>Text</type>
</CustomField>