unpackaged/main/default/objects/FS_Student_Autorenew__mdt/fields/FS_Student_Extension_Renew_Times__c.field-meta.xml
<CustomField>
    <fullName>FS_Student_Extension_Renew_Times__c</fullName>
    <description>This field value indicates that how many times the student extension plan is renewed</description>
    <label>Student Extension Renew Times</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>